implement CRUD for blog

--- a/messenger/static/messenger/style.css
+++ b/messenger/static/messenger/style.css
@@ -20,7 +20,7 @@ body{
     padding:0;
 }
 .panel{
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 .chat-window{
     bottom:0;
@@ -138,6 +138,6 @@ img {
 
 .btn-group.dropup{
     position:fixed;
-    left:0px;
+    left:0;
     bottom:0;
 }
