--- a/shortener/templates/shortener/urls_list.html
+++ b/shortener/templates/shortener/urls_list.html
@@ -7,31 +7,35 @@
     <div class="box">
         <h4 class="text-center mt-2">Список ссылок</h4>
         {% if object_list %}
-        <p>Ваши личные ссылки. Выберите любую, чтобы просмотреть информацию и отредактировать</p>
-        {% if is_paginated %}
-        <ul class="pagination">
-            {% if page_obj.has_previous %}
-                <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.previous_page_number }}">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a></li>
-            {% else %}
-                <li class="page-item disabled"><span class="page-link">Previous</span></li>
+            <p>Ваши личные ссылки. Выберите любую, чтобы просмотреть информацию и отредактировать</p>
+            {% if is_paginated %}
+                <ul class="pagination">
+                    {% if page_obj.has_previous %}
+                        <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.previous_page_number }}">Previous</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled"><span class="page-link">Previous</span></li>
+                    {% endif %}
+                    <li class="page-item active" aria-current="page"><span class="page-link">{{ page_obj.number }}</span></li>
+                    {% if page_obj.has_next %}
+                        <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.next_page_number }}">Next</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled"><span class="page-link">Next</span></li>
+                    {% endif %}
+                </ul>
             {% endif %}
-                 <li class="page-item active" aria-current="page"><span class="page-link">{{ page_obj.number }}</span></li>
-            {% if page_obj.has_next %}
-                <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a></li>
-                <li class="page-item"><a class="page-link" href="{% url 'detail_user' %}?page={{ page_obj.next_page_number }}">Next</a></li>
-            {% else %}
-              <li class="page-item disabled"><span class="page-link">Next</span></li>
-            {% endif %}
-        </ul>
-        {% endif %}
-        <div class="list-group mb-2">
-            {% for url in object_list %}
-            <a href="{% url 'detail_url' slug=url.slug %}" class="list-group-item list-group-item-action">http://malash.ru/{{ url.slug }}</a>
-            {% endfor %}
-        </div>
+            <div class="list-group mb-2">
+                {% for url in object_list %}
+                    <a href="{% url 'detail_url' slug=url.slug %}" class="list-group-item list-group-item-action">http://malash.ru/{{ url.slug }}</a>
+                {% endfor %}
+            </div>
         {% else %}
-        <p class="text-center ">К сожалению, он пуст. Создайте новую <a href="{% url 'index' %}">тут</a></p>
+            <p class="text-center ">К сожалению, он пуст. Создайте новую <a href="{% url 'index' %}">тут</a></p>
         {% endif %}
     </div>
 {% endblock %}
