--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -8,6 +8,10 @@ body{
     width: auto;
 }
 
+.post-footer {
+    display: flex;
+    justify-content: space-between;
+}
 .box {
     margin: 20px auto;
     max-width: 758px;
@@ -310,4 +314,42 @@ color:white;
 .btn-my1:active,.btn-my1:focus{
 background:#1987c2;
 color:white;
+}
+
+i {
+  cursor:pointer;
+  padding:10px 12px 8px;
+  background:#fff;
+  border-radius:50%;
+  display:inline-block;
+  margin:0 0 15px;
+  color:#aaa;
+  transition:.2s;
+}
+
+i:hover {
+  color:#666;
+}
+
+i:before {
+    font-family: fontawesome;
+  content:'\f004';
+  font-style:normal;
+}
+
+i.press {
+  color:#e23b3b;
+}
+
+@keyframes fade {
+  0% {color:#transparent;}
+  50% {color:#e23b3b;}
+  100% {color:#transparent;}
+}
+
+@keyframes size {
+  0% {padding:10px 12px 8px;}
+  50% {padding:14px 16px 12px;
+    margin-top:-4px;}
+  100% {padding:10px 12px 8px;}
 }
