--- a/shortener/templates/shortener/tag_detail.html
+++ b/shortener/templates/shortener/tag_detail.html
@@ -9,7 +9,7 @@
         <div class="list-group mb-2">
             {% if object_list %}
                 {% for url in object_list %}
-                    <a href="{% url 'detail_url' slug=url.slug %}" class="list-group-item list-group-item-action">http://malash.ru/{{ url.slug }}</a>
+                    <a href="{% url 'detail_url' slug=url.slug %}" class="list-group-item list-group-item-action">{{ SITE_HOST }}/{{ url.slug }}</a>
                 {% endfor %}
             {% else %}
                 <p>Ссылок нет</p>
